academic module intigration and add role-based test CRUD